cluster/manifest/overlays/production/deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  namespace: default
  labels:
    app: traefik
spec:
  template:
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.3
          volumeMounts:
            - name: traefik-config
              mountPath: /etc/traefik/traefik.yml
              subPath: traefik.yml
              readOnly: true
          args:
            - --providers.kubernetescrd
            # Staging server for testing
            - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
            items:
              - key: traefik.yml
                path: traefik.yml
