cluster/manifest/overlays/production/portfolio-deployment-patch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: portfolio
  namespace: default
  labels:
    app: portfolio

spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  strategy: {}
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - image: ghcr.io/kaichevannes/portfolio:b369111b2fa674091824b3ab8ab960f7eab9481e
        name: portfolio
        ports:
          - name: web
            containerPort: 3000
