cluster/manifest/overlays/production/traefik-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  namespace: default
spec:
  template:
    spec:
      containers:
        - name: traefik
          image: traefik:v3.3
          args:
            - --accessLog
            - --providers.kubernetescrd
            - --entryPoints.web.address=:80
            - --entryPoints.websecure.address=:443
            - --certificatesResolvers.myresolver.acme.email=chevannes.kai@gmail.com
            - --certificatesResolvers.myresolver.acme.storage=acme.json
            - --certificatesResolvers.myresolver.acme.dnsChallenge.provider=porkbun
            - --certificatesResolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
