cluster/manifest/overlays/production/portfolio-ingress-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kaichevannes.com`) || Host(`www.kaichevannes.com`)
    kind: Rule
    services:
    - name: portfolio
      port: 3000
  tls:
    certResolver: myresolver
